--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,29 @@
-# Prerequisites
-*.d
+# ignore hidden files
+.*
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+# ignore generated documentation tables
+doc/guides/nics/overview_table.txt
+doc/guides/cryptodevs/overview_feature_table.txt
+doc/guides/cryptodevs/overview_cipher_table.txt
+doc/guides/cryptodevs/overview_auth_table.txt
+doc/guides/cryptodevs/overview_aead_table.txt
+doc/guides/cryptodevs/overview_asym_table.txt
+doc/guides/compressdevs/overview_feature_table.txt
 
-# Linker output
-*.ilk
-*.map
-*.exp
+# ignore generated ctags/cscope files
+cscope.out.po
+cscope.out.in
+cscope.out
+cscope.files
+GTAGS
+GPATH
+GRTAGS
+tags
+TAGS
 
-# Precompiled Headers
-*.gch
-*.pch
+# ignore python bytecode files
+*.pyc
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+# ignore default build directory, and directories from test-meson-builds.sh
+build
+build-*
